[package]
name = "redefined-derive"
version = "0.1.0"
edition = "2021"


[lib]
name = "redefined_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"


# https
reqwest = { version = "0.12.2", optional = true, features = ["json"] }

# async
tokio = { version = "1.28.2", optional = true, features = ["full"] }
futures = { version = "0.3.28", optional = true }

# serde
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }


[features]
default = ["unsafe", "remote"]
unsafe = []
remote = ["reqwest", "tokio", "serde", "serde_json", "futures"]


